<resources>
    <string name="app_name">Math Solver</string>
    <string name="nav_drawer_home">Home</string>
    <string name="nav_drawer_linear_equation">Linear Equation</string>
    <string name="nav_drawer_determinant">Determinant</string>
    <string name="determinant_fragment_determinant2D_top_label_name">2D Determinant</string>
    <string name="determinant_fragment_determinant3D_top_label_name">3D Determinant</string>
    <string name="determinant_fragment_determinant4D_top_label_name">4D Determinant</string>
    <string name="home_fragment_top_label_name">Home</string>
    <string name="submit_text">Submit</string>
    <string name="reset_text">Reset</string>
    <string name="field_a1_hint">A1</string>
    <string name="field_a2_hint">A2</string>
    <string name="field_a3_hint">A3</string>
    <string name="field_a4_hint">A4</string>
    <string name="field_b1_hint">B1</string>
    <string name="field_b2_hint">B2</string>
    <string name="field_b3_hint">B3</string>
    <string name="field_b4_hint">B4</string>
    <string name="field_c1_hint">C1</string>
    <string name="field_c2_hint">C2</string>
    <string name="field_c3_hint">C3</string>
    <string name="field_c4_hint">C4</string>
    <string name="field_d1_hint">D1</string>
    <string name="field_d2_hint">D2</string>
    <string name="field_d3_hint">D3</string>
    <string name="field_d4_hint">D4</string>
    <string name="field_answer_hint">Answer</string>
    <string name="invalid_input_text">Enter Valid Input!</string>
    <string name="info">Math Solver v0.4.1\nAuthor: Avirup Banerjee\nVersion: 0.4.1\n\nThis is a Math Solver made by me. Hope you like it</string>
    <string name="invalid_expression_text">Enter Valid Expression!</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="linear_equation_fragment_linear_equation_2v_top_label_name">Linear Equation with 2 variables</string>
    <string name="linear_equation_fragment_linear_equation_3v_top_label_name">Linear Equation with 3 variables</string>
    <string name="linear_equation_fragment_linear_equation_4v_top_label_name">Linear Equation with 4 variables</string>
    <string name="text_w">W</string>
    <string name="text_x">X</string>
    <string name="text_y">Y</string>
    <string name="text_z">Z</string>
    <string name="text_plus">+</string>
    <string name="text_equal_to">=</string>
    <string name="menu_title_2D_Determinant">2D Determiant</string>
    <string name="menu_title_3D_Determinant">3D Determiant</string>
    <string name="menu_title_4D_Determinant">4D Determiant</string>
    <string name="menu_title_2v_linear_equation">2 varible</string>
    <string name="menu_title_3v_linear_equation">3 varible</string>
    <string name="menu_title_4v_linear_equation">4 varible</string>
    <string name="home_string">Never leave a sum unsolved</string>
    <string name="nav_drawer_about">About</string>
    <string name="nav_drawer_share">Share</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>

</resources>