<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_drawer_home" />
        <item
            android:id="@+id/nav_linear_equation"
            android:icon="@drawable/linear_equation_2v"
            android:title="@string/nav_drawer_linear_equation" />
        <item
            android:id="@+id/nav_determinant"
            android:icon="@drawable/ic_determinant"
            android:title="@string/nav_drawer_determinant" />
    </group>

    <group>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="About" />
    </group>

</menu>