<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".fragments.determinantFragments.Determinant2D"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/determinant_fragment_determinant2D_top_label_name"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <View
                android:id="@+id/view2"
                android:layout_width="2dp"
                android:layout_height="170dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="25dp"
                android:background="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="2dp"
                android:layout_height="170dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="19dp"
                android:background="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/text_a1_2D"
                android:layout_width="62dp"
                android:layout_height="42dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/field_a1_hint"
                android:importantForAutofill="no"
                android:inputType="numberSigned|textPhonetic|numberDecimal"
                android:nextFocusLeft="@id/text_a2_2D"
                android:nextFocusRight="@id/text_a2_2D"
                android:nextFocusUp="@id/text_a2_2D"
                android:nextFocusDown="@id/text_a2_2D"
                android:nextFocusForward="@id/text_a2_2D"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/text_a2_2D"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/text_a2_2D"
                android:layout_width="62dp"
                android:layout_height="42dp"
                android:ems="10"
                android:hint="@string/field_a2_hint"
                android:importantForAutofill="no"
                android:inputType="numberSigned|textPhonetic|numberDecimal"
                android:nextFocusLeft="@id/text_b1_2D"
                android:nextFocusRight="@id/text_b1_2D"
                android:nextFocusUp="@id/text_b1_2D"
                android:nextFocusDown="@id/text_b1_2D"
                android:nextFocusForward="@id/text_b1_2D"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/text_a1_2D"
                app:layout_constraintEnd_toStartOf="@+id/view2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_a1_2D" />

            <EditText
                android:id="@+id/text_b1_2D"
                android:layout_width="62dp"
                android:layout_height="42dp"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/field_b1_hint"
                android:importantForAutofill="no"
                android:inputType="numberSigned|textPhonetic|numberDecimal"
                android:nextFocusLeft="@id/text_b2_2D"
                android:nextFocusRight="@id/text_b2_2D"
                android:nextFocusUp="@id/text_b2_2D"
                android:nextFocusDown="@id/text_b2_2D"
                android:nextFocusForward="@id/text_b2_2D"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/text_b2_2D"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/text_a1_2D" />

            <EditText
                android:id="@+id/text_b2_2D"
                android:layout_width="62dp"
                android:layout_height="42dp"
                android:ems="10"
                android:hint="@string/field_b2_hint"
                android:importantForAutofill="no"
                android:inputType="numberSigned|textPhonetic|numberDecimal"
                android:nextFocusLeft="@id/text_a1_2D"
                android:nextFocusRight="@id/text_a1_2D"
                android:nextFocusUp="@id/text_a1_2D"
                android:nextFocusDown="@id/text_a1_2D"
                android:nextFocusForward="@id/text_a1_2D"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/text_b1_2D"
                app:layout_constraintEnd_toStartOf="@+id/view2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_b1_2D" />

            <Button
                android:id="@+id/submit_button_2D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/submit_text"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/reset_button_2D"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/text_b1_2D" />

            <Button
                android:id="@+id/reset_button_2D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_text"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/submit_button_2D"
                app:layout_constraintEnd_toStartOf="@+id/view2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/submit_button_2D" />

            <EditText
                android:id="@+id/text_answer_2D"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:clickable="false"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/field_answer_hint"
                android:importantForAutofill="no"
                android:inputType=""
                android:isScrollContainer="true"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/view2"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/submit_button_2D" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/text_solution_2D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:textAlignment="center"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>