<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.linearEquationFragments.LinearEquation2v">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="31dp"
            android:layout_marginTop="10dp"
            android:text="@string/linear_equation_fragment_linear_equation_2v_top_label_name"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <EditText
                android:id="@+id/text_x1_le_2v"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberSigned|textPhonetic|numberDecimal"
                android:nextFocusLeft="@id/text_y1_le_2v"
                android:nextFocusRight="@id/text_y1_le_2v"
                android:nextFocusUp="@id/text_y1_le_2v"
                android:nextFocusDown="@id/text_y1_le_2v"
                android:nextFocusForward="@id/text_y1_le_2v"
                android:textAlignment="center"
                android:textStyle="italic"
                app:layout_constraintBaseline_toBaselineOf="@+id/text_y1_le_2v"
                app:layout_constraintEnd_toStartOf="@+id/textView4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="113dp"
                android:text="@string/text_x"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/textView5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_x1_le_2v"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="113dp"
                android:text="@string/text_plus"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/text_y1_le_2v"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/text_y1_le_2v"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginTop="103dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberSigned|textPhonetic|numberDecimal"
                android:nextFocusLeft="@id/text_c1_le_2v"
                android:nextFocusRight="@id/text_c1_le_2v"
                android:nextFocusUp="@id/text_c1_le_2v"
                android:nextFocusDown="@id/text_c1_le_2v"
                android:nextFocusForward="@id/text_c1_le_2v"
                android:textAlignment="center"
                android:textStyle="italic"
                app:layout_constraintEnd_toStartOf="@+id/textView6"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="113dp"
                android:text="@string/text_y"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/textView7"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_y1_le_2v"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="113dp"
                android:text="@string/text_equal_to"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/text_c1_le_2v"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/text_c1_le_2v"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberSigned|textPhonetic|numberDecimal"
                android:nextFocusLeft="@id/text_x2_le_2v"
                android:nextFocusRight="@id/text_x2_le_2v"
                android:nextFocusUp="@id/text_x2_le_2v"
                android:nextFocusDown="@id/text_x2_le_2v"
                android:nextFocusForward="@id/text_x2_le_2v"
                android:textAlignment="center"
                android:textStyle="italic"
                app:layout_constraintBaseline_toBaselineOf="@+id/text_y1_le_2v"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView7" />

            <EditText
                android:id="@+id/text_x2_le_2v"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberSigned|textPhonetic|numberDecimal"
                android:nextFocusLeft="@id/text_y2_le_2v"
                android:nextFocusRight="@id/text_y2_le_2v"
                android:nextFocusUp="@id/text_y2_le_2v"
                android:nextFocusDown="@id/text_y2_le_2v"
                android:nextFocusForward="@id/text_y2_le_2v"
                android:textAlignment="center"
                android:textStyle="italic"
                app:layout_constraintBaseline_toBaselineOf="@+id/text_y2_le_2v"
                app:layout_constraintEnd_toStartOf="@+id/textView8"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:text="@string/text_x"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/textView9"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_x2_le_2v"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:text="@string/text_plus"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/text_y2_le_2v"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <EditText
                android:id="@+id/text_y2_le_2v"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberSigned|textPhonetic|numberDecimal"
                android:nextFocusLeft="@id/text_c2_le_2v"
                android:nextFocusRight="@id/text_c2_le_2v"
                android:nextFocusUp="@id/text_c2_le_2v"
                android:nextFocusDown="@id/text_c2_le_2v"
                android:nextFocusForward="@id/text_c2_le_2v"
                android:textAlignment="center"
                android:textStyle="italic"
                app:layout_constraintEnd_toStartOf="@+id/textView10"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/text_y1_le_2v" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:text="@string/text_y"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/textView11"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_y2_le_2v"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:text="@string/text_equal_to"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/text_c2_le_2v"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <EditText
                android:id="@+id/text_c2_le_2v"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberSigned|textPhonetic|numberDecimal"
                android:nextFocusLeft="@id/text_x1_le_2v"
                android:nextFocusRight="@id/text_x1_le_2v"
                android:nextFocusUp="@id/text_x1_le_2v"
                android:nextFocusDown="@id/text_x1_le_2v"
                android:nextFocusForward="@id/text_x1_le_2v"
                android:textAlignment="center"
                android:textStyle="italic"
                app:layout_constraintBaseline_toBaselineOf="@+id/text_y2_le_2v"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView11" />

            <TextView
                android:id="@+id/text_answer_le_2v"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_y2_le_2v" />

            <Button
                android:id="@+id/sumbit_button_le_2v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/submit_text"
                app:layout_constraintEnd_toStartOf="@+id/reset_button_le_2v"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_y2_le_2v" />

            <Button
                android:id="@+id/reset_button_le_2v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_text"
                app:layout_constraintBaseline_toBaselineOf="@+id/sumbit_button_le_2v"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/sumbit_button_le_2v" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>